после loading LAZY

--- a/#src/blocks/common/footer.html
+++ b/#src/blocks/common/footer.html
@@ -96,7 +96,7 @@
 			</div>
 			<div class="p-8 md4-dn"><hr></div>
 			<div class="footer__row2">
-				<img src="img/Toplash-logo.svg" alt="" class="logoImage">
+				<img loading="lazy" src="img/Toplash-logo.svg" alt="" class="logoImage">
 				<div class="panel">
 					<div class="panel__socials nlc-mr-8">
 						<a href="https://www.tiktok.com/@toplashrussia"><svg class="w24"><use xlink:href="img/sprite/icons-sprite.svg#tik-tok"/></svg></a>
