--- a/#src/blocks/productPage/feedback.html
+++ b/#src/blocks/productPage/feedback.html
@@ -5,7 +5,7 @@
 			<div class="f-jcsb-aic mb-16">
 				<div class="f-aic">
 					<div class="userImage mr-16">
-						<img src="img/people/03.jpg" alt="">
+						<img loading="lazy" src="img/people/03.jpg" alt="">
 						<span>К</span>
 					</div>
 					<p class="text-extra-small">Кристина Желяскова</p>
@@ -30,27 +30,27 @@
 				<div class="imageFeedback js-detect-grid">
 					<div class="imageFeedback__item">
 						<div class="imageFeedback__wrap">
-							<img src="img/reviews/01.webp" alt="">
+							<img loading="lazy" src="img/reviews/01.webp" alt="">
 						</div>
 					</div>
 					<div class="imageFeedback__item">
 						<div class="imageFeedback__wrap">
-							<img src="img/reviews/v-05.jpg" alt="">
+							<img loading="lazy" src="img/reviews/v-05.jpg" alt="">
 						</div>
 					</div>
 					<div class="imageFeedback__item">
 						<div class="imageFeedback__wrap">
-							<img src="img/reviews/04.webp" alt="">
+							<img loading="lazy" src="img/reviews/04.webp" alt="">
 						</div>
 					</div>
 					<div class="imageFeedback__item">
 						<div class="imageFeedback__wrap">
-							<img src="img/reviews/05.webp" alt="">
+							<img loading="lazy" src="img/reviews/05.webp" alt="">
 						</div>
 					</div>
 					<div class="imageFeedback__item">
 						<div class="imageFeedback__wrap">
-							<img src="img/reviews/03.webp" alt="">
+							<img loading="lazy" src="img/reviews/03.webp" alt="">
 						</div>
 					</div>
 					<div class="imageFeedback__item">
@@ -65,7 +65,7 @@
 			<div class="f-jcsb-aic mb-16">
 				<div class="f-aic">
 					<div class="userImage mr-16">
-						<!-- <img src="img/people/02.jpg" alt=""> -->
+						<!-- <img loading="lazy" src="img/people/02.jpg" alt=""> -->
 						<span>О</span>
 					</div>
 					<p class="text-extra-small">Ольга Димитриченко</p>
@@ -90,7 +90,7 @@
 				<div class="imageFeedback js-detect-grid">
 					<div class="imageFeedback__item">
 						<div class="imageFeedback__wrap">
-							<img src="img/reviews/01.webp" alt="">
+							<img loading="lazy" src="img/reviews/01.webp" alt="">
 						</div>
 					</div>
 					<div class="imageFeedback__item">
@@ -100,12 +100,12 @@
 					</div>
 					<div class="imageFeedback__item">
 						<div class="imageFeedback__wrap">
-							<img src="img/reviews/02.webp" alt="">
+							<img loading="lazy" src="img/reviews/02.webp" alt="">
 						</div>
 					</div>
 					<div class="imageFeedback__item">
 						<div class="imageFeedback__wrap">
-							<img src="img/reviews/07.webp" alt="">
+							<img loading="lazy" src="img/reviews/07.webp" alt="">
 						</div>
 					</div>
 				</div>
