--- a/#src/blocks/productPage/product.html
+++ b/#src/blocks/productPage/product.html
@@ -52,41 +52,41 @@
 					<div class="scrollPreview js-scrollPreview">
 						<div class="scrollPreview__body">
 							<div class="scrollPreview__item active">
-								<img src="img/other/01.jpg" alt="">
+								<img loading="lazy" src="img/other/01.jpg" alt="">
 							</div>
 							<div class="scrollPreview__item">
-								<img src="img/other/02.jpg" alt="">
+								<img loading="lazy" src="img/other/02.jpg" alt="">
 							</div>
 							<div class="scrollPreview__item">
-								<img src="img/other/04.jpg" alt="">
+								<img loading="lazy" src="img/other/04.jpg" alt="">
 							</div>
 							<div class="scrollPreview__item">
-								<img src="img/other/05.jpg" alt="">
+								<img loading="lazy" src="img/other/05.jpg" alt="">
 							</div>
 							<div class="scrollPreview__item">
-								<img src="img/other/06.jpg" alt="">
+								<img loading="lazy" src="img/other/06.jpg" alt="">
 							</div>
 							<div class="scrollPreview__item">
-								<img src="img/other/07.jpg" alt="">
+								<img loading="lazy" src="img/other/07.jpg" alt="">
 								<span class="btnRound btnPlayVideo"><svg class="w16"><use xlink:href="img/sprite/icons-sprite.svg#play"></use></svg></span>
 							</div>
 							<div class="scrollPreview__item">
-								<img src="img/other/08.jpg" alt="">
+								<img loading="lazy" src="img/other/08.jpg" alt="">
 							</div>
 							<div class="scrollPreview__item">
-								<img src="img/other/10.jpg" alt="">
+								<img loading="lazy" src="img/other/10.jpg" alt="">
 							</div>
 							<div class="scrollPreview__item">
-								<img src="img/other/11.jpg" alt="">
+								<img loading="lazy" src="img/other/11.jpg" alt="">
 							</div>
 							<div class="scrollPreview__item">
-								<img src="img/other/12.jpg" alt="">
+								<img loading="lazy" src="img/other/12.jpg" alt="">
 							</div>
 							<div class="scrollPreview__item">
-								<img src="img/other/13.jpg" alt="">
+								<img loading="lazy" src="img/other/13.jpg" alt="">
 							</div>
 							<div class="scrollPreview__item">
-								<img src="img/other/08.webp" alt="">
+								<img loading="lazy" src="img/other/08.webp" alt="">
 								<span class="btnRound btnPlayVideo"><svg class="w16"><use xlink:href="img/sprite/icons-sprite.svg#play"></use></svg></span>
 							</div>
 						</div>
@@ -177,7 +177,7 @@
 							<span>В корзину</span>
 						</button>
 						<div class="warranty">
-							<img src="img/sprite/fill-sprite.svg#security" alt="">
+							<img loading="lazy" src="img/sprite/fill-sprite.svg#security" alt="">
 							<div class="warranty__text">
 								<p class="text-medium">Гарантия 90 дней</p>
 								<p>Если за это время вы оказались недовольны результатом, мы вернём все деньги.</p>
