--- a/#src/blocks/productPage/result21.html
+++ b/#src/blocks/productPage/result21.html
@@ -3,7 +3,7 @@
 		<div class="d-flex-md3-w aic p-8">
 			<div class="col-2 p-8">
 				<div class="imageRad24">
-					<img src="@@imageSrc" alt="">
+					<img loading="lazy" src="@@imageSrc" alt="">
 				</div>
 			</div>
 			<div class="col-2 p-8">
