--- a/#src/blocks/productPage/roller-block-X.html
+++ b/#src/blocks/productPage/roller-block-X.html
@@ -27,7 +27,7 @@
 			</div>
 			<div class="col-2 p-8">
 				<div class="imageRad24">
-					<img src="img/other/07.jpg" alt="">
+					<img loading="lazy" src="img/other/07.jpg" alt="">
 				</div>
 			</div>
 		</div>
