--- a/#src/blocks/productPage/set-block-X.html
+++ b/#src/blocks/productPage/set-block-X.html
@@ -21,7 +21,7 @@
 			</div>
 			<div class="col-2 p-8">
 				<div class="imageRad24">
-					<img src="img/set/02.jpg" alt="">
+					<img loading="lazy" src="img/set/02.jpg" alt="">
 				</div>
 			</div>
 		</div>
