--- a/#src/blocks/productPage/stories.html
+++ b/#src/blocks/productPage/stories.html
@@ -9,18 +9,18 @@
 							<ul class="scroll__scroll">
 								<li class="scroll__item">
 									<div class="about__item" data-id="0">
-										<img src="img/other/08.jpg" alt="">
+										<img loading="lazy" src="img/other/08.jpg" alt="">
 									</div>
 								</li>
 								<li class="scroll__item">
 									<div class="about__item" data-id="1">
-										<img src="img/other/02.jpg" alt="">
+										<img loading="lazy" src="img/other/02.jpg" alt="">
 									</div>
 								</li>
 								<li class="scroll__item">
 									<div class="about__item" data-id="2">
 										<div class="about__news">
-											<img src="img/other/01.jpg" alt="">
+											<img loading="lazy" src="img/other/01.jpg" alt="">
 											<div class="about__text">
 												<p class="text-big mb-16">до/после</p>
 												<p class="text-big about__photoCount">6 фото</p>
@@ -30,42 +30,42 @@
 								</li>
 								<li class="scroll__item">
 									<div class="about__item" data-id="3">
-										<img src="img/other/04.jpg" alt="">
+										<img loading="lazy" src="img/other/04.jpg" alt="">
 									</div>
 								</li>
 								<li class="scroll__item">
 									<div class="about__item" data-id="4">
-										<img src="img/other/05.jpg" alt="">
+										<img loading="lazy" src="img/other/05.jpg" alt="">
 									</div>
 								</li>
 								<li class="scroll__item">
 									<div class="about__item" data-id="5">
-										<img src="img/other/v-04.jpg" alt="">
+										<img loading="lazy" src="img/other/v-04.jpg" alt="">
 									</div>
 								</li>
 								<li class="scroll__item">
 									<div class="about__item" data-id="6">
-										<img src="img/other/07.jpg" alt="">
+										<img loading="lazy" src="img/other/07.jpg" alt="">
 									</div>
 								</li>
 								<li class="scroll__item">
 									<div class="about__item" data-id="7">
-										<img src="img/other/10.jpg" alt="">
+										<img loading="lazy" src="img/other/10.jpg" alt="">
 									</div>
 								</li>
 								<li class="scroll__item">
 									<div class="about__item" data-id="8">
-										<img src="img/other/11.jpg" alt="">
+										<img loading="lazy" src="img/other/11.jpg" alt="">
 									</div>
 								</li>
 								<li class="scroll__item">
 									<div class="about__item" data-id="9">
-										<img src="img/other/12.jpg" alt="">
+										<img loading="lazy" src="img/other/12.jpg" alt="">
 									</div>
 								</li>
 								<li class="scroll__item">
 									<div class="about__item" data-id="10">
-										<img src="img/other/v-06.jpg" alt="">
+										<img loading="lazy" src="img/other/v-06.jpg" alt="">
 									</div>
 								</li>
 							</ul>
