--- a/#src/blocks/productPage/terms.html
+++ b/#src/blocks/productPage/terms.html
@@ -4,19 +4,19 @@
 		<div class="d-flex-w">
 			<div class="col-3 p-16">
 				<div class="cardTerms v1">
-					<img src="img/sprite/fill-sprite.svg#delivery" alt="">
+					<img loading="lazy" src="img/sprite/fill-sprite.svg#delivery" alt="">
 					<p class="text-medium">Бесплатная доставка от 2 000 ₽</p>
 				</div>
 			</div>
 			<div class="col-3 p-16">
 				<div class="cardTerms v2">
-					<img src="img/sprite/fill-sprite.svg#revers" alt="">
+					<img loading="lazy" src="img/sprite/fill-sprite.svg#revers" alt="">
 					<p class="text-medium">Легкий возврат</p>
 				</div>
 			</div>
 			<div class="col-3 p-16">
 				<div class="cardTerms v3">
-					<img src="img/sprite/fill-sprite.svg#security" alt="">
+					<img loading="lazy" src="img/sprite/fill-sprite.svg#security" alt="">
 					<p class="text-medium">Гарантия 90 дней</p>
 				</div>
 			</div>
