--- a/#src/blocks/productPage/unique.html
+++ b/#src/blocks/productPage/unique.html
@@ -23,10 +23,10 @@
 						<tr>
 							<td class="bg-lightGray"></td>
 							<td class="image1 @@classTableBG brad-t">
-								<img src="@@img1" alt="">
+								<img loading="lazy" src="@@img1" alt="">
 							</td>
 							<td class="image2 bg-lightGray">
-								<img src="@@img2" alt="">
+								<img loading="lazy" src="@@img2" alt="">
 							</td>
 						</tr>
 						<tr>
