--- a/#src/blocks/productPage/useful.html
+++ b/#src/blocks/productPage/useful.html
@@ -22,7 +22,7 @@
 						<a href="https://site.com">
 							<div class="useful__image">
 								<div class="useful__imageWrap">
-									<img src="img/card/Mascara.jpg" alt="">
+									<img loading="lazy" src="img/card/Mascara.jpg" alt="">
 								</div>
 							</div>
 							<div class="useful__text nlc-mb-12 d-flex fdc flex-1">
@@ -51,7 +51,7 @@
 						<a href="https://site2.com">
 							<div class="useful__image">
 								<div class="useful__imageWrap">
-									<img src="img/card/Eyeliner.jpg" alt="">
+									<img loading="lazy" src="img/card/Eyeliner.jpg" alt="">
 								</div>
 							</div>
 							<div class="useful__text nlc-mb-12 d-flex fdc flex-1">
@@ -84,7 +84,7 @@
 						<a href="https://site3.com">
 							<div class="useful__image">
 								<div class="useful__imageWrap">
-									<img src="img/set/03.jpg" alt="">
+									<img loading="lazy" src="img/set/03.jpg" alt="">
 								</div>
 							</div>
 							<div class="useful__text nlc-mb-12 d-flex fdc flex-1">
