--- a/#src/blocks/productPage/whyToplash.html
+++ b/#src/blocks/productPage/whyToplash.html
@@ -4,21 +4,21 @@
 		<div class="d-flex-w">
 			<div class="col-3 p-16">
 				<div class="cardTerms @@items.1.cardClass mod-v2">
-					<img src="img/sprite/fill-sprite.svg#@@items.1.icon" alt="">
+					<img loading="lazy" src="img/sprite/fill-sprite.svg#@@items.1.icon" alt="">
 					<p class="text-medium">@@items.1.label</p>
 					<p>@@items.1.text</p>
 				</div>
 			</div>
 			<div class="col-3 p-16">
 				<div class="cardTerms @@items.2.cardClass mod-v2">
-					<img src="img/sprite/fill-sprite.svg#@@items.2.icon" alt="">
+					<img loading="lazy" src="img/sprite/fill-sprite.svg#@@items.2.icon" alt="">
 					<p class="text-medium">@@items.2.label</p>
 					<p>@@items.2.text</p>
 				</div>
 			</div>
 			<div class="col-3 p-16">
 				<div class="cardTerms @@items.3.cardClass mod-v2">
-					<img src="img/sprite/fill-sprite.svg#@@items.3.icon" alt="">
+					<img loading="lazy" src="img/sprite/fill-sprite.svg#@@items.3.icon" alt="">
 					<p class="text-medium">@@items.3.label</p>
 					<p>@@items.3.text</p>
 				</div>
