--- a/#src/blog.html
+++ b/#src/blog.html
@@ -13,13 +13,13 @@
 		<div class="d-flex md3-fww flexMod-1">
 			<div class="flex-1 p-16">
 				<a href="" class="cardImage">
-					<img src="img/other/08.jpg" alt="">
+					<img loading="lazy" src="img/other/08.jpg" alt="">
 					<p class="text-medium p-16">Последняя статья на сайте</p>
 				</a>
 			</div>
 			<div class="flexMod-1__colMin md3-colMax p-16">
 				<a href="" class="cardImage">
-					<img src="img/other/01.jpg" alt="">
+					<img loading="lazy" src="img/other/01.jpg" alt="">
 					<p class="text-medium p-16">Длинные ресницы и густые брови — за 21 день без наращивания</p>
 				</a>
 			</div>
@@ -27,19 +27,19 @@
 		<div class="d-flex-w">
 			<div class="col-3 p-16">
 				<a href="" class="cardImage">
-					<img src="img/other/bg-header.jpg" alt="">
+					<img loading="lazy" src="img/other/bg-header.jpg" alt="">
 					<p class="text-medium p-16">Как правильно ухаживать за ресницами после наращивания?</p>
 				</a>
 			</div>
 			<div class="col-3 p-16">
 				<a href="" class="cardImage">
-					<img src="img/other/087.jpg" alt="">
+					<img loading="lazy" src="img/other/087.jpg" alt="">
 					<p class="text-medium p-16">Длинные ресницы и густые брови — за 21 день без наращивания</p>
 				</a>
 			</div>
 			<div class="col-3 p-16">
 				<a href="" class="cardImage">
-					<img src="img/other/b-01.jpg" alt="">
+					<img loading="lazy" src="img/other/b-01.jpg" alt="">
 					<p class="text-medium p-16">Длинные ресницы и густые брови — за 21 день без наращивания</p>
 				</a>
 			</div>
@@ -47,13 +47,13 @@
 		<div class="d-flex md3-fww flexMod-1">
 			<div class="flexMod-1__colMin md3-colMax p-16">
 				<a href="" class="cardImage">
-					<img src="img/other/053.jpg" alt="">
+					<img loading="lazy" src="img/other/053.jpg" alt="">
 					<p class="text-medium p-16">Почему 58% девушек отказываются от наращивания ресниц уже после первого раза?</p>
 				</a>
 			</div>
 			<div class="flex-1 p-16">
 				<a href="" class="cardImage">
-					<img src="img/other/plate.png" alt="">
+					<img loading="lazy" src="img/other/plate.png" alt="">
 					<p class="text-medium p-16">Важность питания</p>
 				</a>
 			</div>
@@ -61,19 +61,19 @@
 		<div class="d-flex-w">
 			<div class="col-3 p-16">
 				<a href="" class="cardImage">
-					<img src="img/other/10.jpg" alt="">
+					<img loading="lazy" src="img/other/10.jpg" alt="">
 					<p class="text-medium p-16">Результаты за 21 день</p>
 				</a>
 			</div>
 			<div class="col-3 p-16">
 				<a href="" class="cardImage">
-					<img src="img/other/044.jpg" alt="">
+					<img loading="lazy" src="img/other/044.jpg" alt="">
 					<p class="text-medium p-16">Корень женьшеня</p>
 				</a>
 			</div>
 			<div class="col-3 p-16">
 				<a href="" class="cardImage">
-					<img src="img/other/011.jpg" alt="">
+					<img loading="lazy" src="img/other/011.jpg" alt="">
 					<p class="text-medium p-16">Как наносить</p>
 				</a>
 			</div>
