--- a/#src/info.html
+++ b/#src/info.html
@@ -15,7 +15,7 @@
 				<div class="cartProduct">
 					<div class="cartProduct__col">
 						<div class="image-hw-80">
-							<img src="img/card/01.png" alt="">
+							<img loading="lazy" src="img/card/01.png" alt="">
 						</div>
 					</div>
 					<div class="cartProduct__row">
