--- a/#src/product-check.html
+++ b/#src/product-check.html
@@ -40,7 +40,7 @@
 			</div>
 			<div class="col-2 p-8">
 				<div class="imageArea">
-					<img src="img/other/04.jpg" alt="">
+					<img loading="lazy" src="img/other/04.jpg" alt="">
 				</div>
 			</div>
 		</div>
@@ -48,7 +48,7 @@
 	<div class="main-p-32-16 container lottery">
 		<div class="card-v1 mod-md-p-16">
 			<div class="f-jcc-aic">
-				<img class="lottery__svg" src="img/sprite/fill-sprite.svg#gift" alt="">
+				<img loading="lazy" class="lottery__svg" src="img/sprite/fill-sprite.svg#gift" alt="">
 			</div>
 			<p class="text-huge">Лотерея от Топлаш</p>
 			<p class="text-big darkGray mb-16">Узнайте, возможно вы уже победили!</p>
