--- a/#src/professional.html
+++ b/#src/professional.html
@@ -8,7 +8,7 @@
 	<div class="p-16-0 container">
 		<div class="d-flex-md3-w aifs p-8">
 			<div class="col-2 p-8 sticky-min-md3">
-				<img class="maxW-100" src="img/other/82.jpg" alt="">
+				<img loading="lazy" class="maxW-100" src="img/other/82.jpg" alt="">
 			</div>
 			<div class="col-2 p-8">
 				<div>
