--- a/#src/reviews.html
+++ b/#src/reviews.html
@@ -56,7 +56,7 @@
 				<div class="f-jcsb-aic mb-16">
 					<div class="f-aic">
 						<div class="userImage mr-16">
-							<img src="img/people/03.jpg" alt="">
+							<img loading="lazy" src="img/people/03.jpg" alt="">
 							<span>К</span>
 						</div>
 						<p class="text-extra-small">Кристина Желяскова</p>
@@ -81,27 +81,27 @@
 					<div class="imageFeedback js-detect-grid">
 						<div class="imageFeedback__item">
 							<div class="imageFeedback__wrap">
-								<img src="img/reviews/01.webp" alt="">
+								<img loading="lazy" src="img/reviews/01.webp" alt="">
 							</div>
 						</div>
 						<div class="imageFeedback__item">
 							<div class="imageFeedback__wrap">
-								<img src="img/reviews/v-05.jpg" alt="">
+								<img loading="lazy" src="img/reviews/v-05.jpg" alt="">
 							</div>
 						</div>
 						<div class="imageFeedback__item">
 							<div class="imageFeedback__wrap">
-								<img src="img/reviews/04.webp" alt="">
+								<img loading="lazy" src="img/reviews/04.webp" alt="">
 							</div>
 						</div>
 						<div class="imageFeedback__item">
 							<div class="imageFeedback__wrap">
-								<img src="img/reviews/05.webp" alt="">
+								<img loading="lazy" src="img/reviews/05.webp" alt="">
 							</div>
 						</div>
 						<div class="imageFeedback__item">
 							<div class="imageFeedback__wrap">
-								<img src="img/reviews/03.webp" alt="">
+								<img loading="lazy" src="img/reviews/03.webp" alt="">
 							</div>
 						</div>
 						<div class="imageFeedback__item">
@@ -116,7 +116,7 @@
 				<div class="f-jcsb-aic mb-16">
 					<div class="f-aic">
 						<div class="userImage mr-16">
-							<!-- <img src="img/people/03.jpg" alt=""> -->
+							<!-- <img loading="lazy" src="img/people/03.jpg" alt=""> -->
 							<span>О</span>
 						</div>
 						<p class="text-extra-small">Ольга Димитриченко</p>
@@ -141,7 +141,7 @@
 					<div class="imageFeedback js-detect-grid">
 						<div class="imageFeedback__item">
 							<div class="imageFeedback__wrap">
-								<img src="img/reviews/01.webp" alt="">
+								<img loading="lazy" src="img/reviews/01.webp" alt="">
 							</div>
 						</div>
 						<div class="imageFeedback__item">
@@ -151,12 +151,12 @@
 						</div>
 						<div class="imageFeedback__item">
 							<div class="imageFeedback__wrap">
-								<img src="img/reviews/02.webp" alt="">
+								<img loading="lazy" src="img/reviews/02.webp" alt="">
 							</div>
 						</div>
 						<div class="imageFeedback__item">
 							<div class="imageFeedback__wrap">
-								<img src="img/reviews/07.webp" alt="">
+								<img loading="lazy" src="img/reviews/07.webp" alt="">
 							</div>
 						</div>
 					</div>
@@ -201,25 +201,25 @@
 				</div>
 				<div class="reviewCategory__col">
 					<a href="" class="reviewCategory__item">
-						<img class="h24" src="img/reviewers/ozon.svg" alt="">
+						<img loading="lazy" class="h24" src="img/reviewers/ozon.svg" alt="">
 						<p>4.8 <span class="darkGray">(479)</span></p>
 					</a>
 				</div>
 				<div class="reviewCategory__col">
 					<a href="" class="reviewCategory__item">
-						<img class="h24" src="img/reviewers/ym.svg" alt="">
+						<img loading="lazy" class="h24" src="img/reviewers/ym.svg" alt="">
 						<p>4.7 <span class="darkGray">(120)</span></p>
 					</a>
 				</div>
 				<div class="reviewCategory__col">
 					<a href="" class="reviewCategory__item">
-						<img class="h24" src="img/reviewers/WB.svg" alt="">
+						<img loading="lazy" class="h24" src="img/reviewers/WB.svg" alt="">
 						<p>4.7 <span class="darkGray">(94)</span></p>
 					</a>
 				</div>
 				<div class="reviewCategory__col">
 					<a href="" class="reviewCategory__item">
-						<img class="h24" src="img/reviewers/ir.png" alt="">
+						<img loading="lazy" class="h24" src="img/reviewers/ir.png" alt="">
 						<p>4.4 <span class="darkGray">(739)</span></p>
 					</a>
 				</div>
@@ -245,7 +245,7 @@
 					<div class="d-flex aifs jcsb">
 						<div class="f-aic">
 							<div class="userImage mr-16">
-								<img src="img/people/03.jpg" alt="">
+								<img loading="lazy" src="img/people/03.jpg" alt="">
 								<span>К</span>
 							</div>
 							<div class="text-footnote mr-4">
@@ -264,10 +264,10 @@
 						<button class="cardReviews__button"><span class="show-more">Показать больше...</span><span class="show-less">Показать меньше...</span></button>
 						<div class="cardReviews__footer f-jcsb-aic">
 							<a href="https://ssilka-na-sait-s-otzivami">
-								<img class="h24" src="img/reviewers/ozon.svg" alt="">
+								<img loading="lazy" class="h24" src="img/reviewers/ozon.svg" alt="">
 							</a>
 							<a href="https://ssilka-na-tovar">
-								<img class="w80" src="img/card/01.png" alt="">
+								<img loading="lazy" class="w80" src="img/card/01.png" alt="">
 							</a>	
 						</div>
 					</div>
@@ -278,7 +278,7 @@
 					<div class="d-flex aifs jcsb">
 						<div class="f-aic">
 							<div class="userImage mr-16">
-								<img src="img/people/01.jpg" alt="">
+								<img loading="lazy" src="img/people/01.jpg" alt="">
 								<span>М</span>
 							</div>
 							<div class="text-footnote mr-4">
@@ -297,10 +297,10 @@
 						<button class="cardReviews__button"><span class="show-more">Показать больше...</span><span class="show-less">Показать меньше...</span></button>
 						<div class="cardReviews__footer f-jcsb-aic">
 							<a href="https://ssilka-na-sait-s-otzivami">
-								<img class="h24" src="img/reviewers/WB.svg" alt="">
+								<img loading="lazy" class="h24" src="img/reviewers/WB.svg" alt="">
 							</a>
 							<a href="https://ssilka-na-tovar">
-								<img class="w80" src="img/card/02.png" alt="">
+								<img loading="lazy" class="w80" src="img/card/02.png" alt="">
 							</a>	
 						</div>
 					</div>
@@ -311,7 +311,7 @@
 					<div class="d-flex aifs jcsb">
 						<div class="f-aic">
 							<div class="userImage mr-16">
-								<!-- <img src="img/people/03.jpg" alt=""> -->
+								<!-- <img loading="lazy" src="img/people/03.jpg" alt=""> -->
 								<span>А</span>
 							</div>
 							<div class="text-footnote mr-4">
@@ -330,10 +330,10 @@
 						<button class="cardReviews__button"><span class="show-more">Показать больше...</span><span class="show-less">Показать меньше...</span></button>
 						<div class="cardReviews__footer f-jcsb-aic">
 							<a href="https://ssilka-na-sait-s-otzivami">
-								<img class="h24" src="img/reviewers/ym.svg" alt="">
+								<img loading="lazy" class="h24" src="img/reviewers/ym.svg" alt="">
 							</a>
 							<a href="https://ssilka-na-tovar">
-								<img class="w80" src="img/card/03.png" alt="">
+								<img loading="lazy" class="w80" src="img/card/03.png" alt="">
 							</a>	
 						</div>
 					</div>
@@ -344,7 +344,7 @@
 					<div class="d-flex aifs jcsb">
 						<div class="f-aic">
 							<div class="userImage mr-16">
-								<!-- <img src="img/people/03.jpg" alt=""> -->
+								<!-- <img loading="lazy" src="img/people/03.jpg" alt=""> -->
 								<span>А</span>
 							</div>
 							<div class="text-footnote mr-4">
@@ -363,10 +363,10 @@
 						<button class="cardReviews__button"><span class="show-more">Показать больше...</span><span class="show-less">Показать меньше...</span></button>
 						<div class="cardReviews__footer f-jcsb-aic">
 							<a href="https://ssilka-na-sait-s-otzivami">
-								<img class="h24" src="img/reviewers/ir.png" alt="">
+								<img loading="lazy" class="h24" src="img/reviewers/ir.png" alt="">
 							</a>
 							<a href="https://ssilka-na-tovar">
-								<img class="w80" src="img/cart/c-01.png" alt="">
+								<img loading="lazy" class="w80" src="img/cart/c-01.png" alt="">
 							</a>	
 						</div>
 					</div>
@@ -377,7 +377,7 @@
 					<div class="d-flex aifs jcsb">
 						<div class="f-aic">
 							<div class="userImage mr-16">
-								<!-- <img src="img/people/03.jpg" alt=""> -->
+								<!-- <img loading="lazy" src="img/people/03.jpg" alt=""> -->
 								<span>Н</span>
 							</div>
 							<div class="text-footnote mr-4">
@@ -396,10 +396,10 @@
 						<button class="cardReviews__button"><span class="show-more">Показать больше...</span><span class="show-less">Показать меньше...</span></button>
 						<div class="cardReviews__footer f-jcsb-aic">
 							<a href="https://ssilka-na-sait-s-otzivami">
-								<img class="h24" src="img/reviewers/ir.png" alt="">
+								<img loading="lazy" class="h24" src="img/reviewers/ir.png" alt="">
 							</a>
 							<a href="https://ssilka-na-tovar">
-								<img class="w80" src="img/card/02.png" alt="">
+								<img loading="lazy" class="w80" src="img/card/02.png" alt="">
 							</a>	
 						</div>
 					</div>
@@ -410,7 +410,7 @@
 					<div class="d-flex aifs jcsb">
 						<div class="f-aic">
 							<div class="userImage mr-16">
-								<img src="img/people/03.jpg" alt="">
+								<img loading="lazy" src="img/people/03.jpg" alt="">
 								<span>К</span>
 							</div>
 							<div class="text-footnote mr-4">
@@ -429,10 +429,10 @@
 						<button class="cardReviews__button"><span class="show-more">Показать больше...</span><span class="show-less">Показать меньше...</span></button>
 						<div class="cardReviews__footer f-jcsb-aic">
 							<a href="https://ssilka-na-sait-s-otzivami">
-								<img class="h24" src="img/reviewers/ozon.svg" alt="">
+								<img loading="lazy" class="h24" src="img/reviewers/ozon.svg" alt="">
 							</a>
 							<a href="https://ssilka-na-tovar">
-								<img class="w80" src="img/card/01.png" alt="">
+								<img loading="lazy" class="w80" src="img/card/01.png" alt="">
 							</a>	
 						</div>
 					</div>
@@ -443,7 +443,7 @@
 					<div class="d-flex aifs jcsb">
 						<div class="f-aic">
 							<div class="userImage mr-16">
-								<!-- <img src="img/people/03.jpg" alt=""> -->
+								<!-- <img loading="lazy" src="img/people/03.jpg" alt=""> -->
 								<span>А</span>
 							</div>
 							<div class="text-footnote mr-4">
@@ -462,10 +462,10 @@
 						<button class="cardReviews__button"><span class="show-more">Показать больше...</span><span class="show-less">Показать меньше...</span></button>
 						<div class="cardReviews__footer f-jcsb-aic">
 							<a href="https://ssilka-na-sait-s-otzivami">
-								<img class="h24" src="img/reviewers/ym.svg" alt="">
+								<img loading="lazy" class="h24" src="img/reviewers/ym.svg" alt="">
 							</a>
 							<a href="https://ssilka-na-tovar">
-								<img class="w80" src="img/card/03.png" alt="">
+								<img loading="lazy" class="w80" src="img/card/03.png" alt="">
 							</a>	
 						</div>
 					</div>
@@ -476,7 +476,7 @@
 					<div class="d-flex aifs jcsb">
 						<div class="f-aic">
 							<div class="userImage mr-16">
-								<!-- <img src="img/people/03.jpg" alt=""> -->
+								<!-- <img loading="lazy" src="img/people/03.jpg" alt=""> -->
 								<span>М</span>
 							</div>
 							<div class="text-footnote mr-4">
@@ -495,10 +495,10 @@
 						<button class="cardReviews__button"><span class="show-more">Показать больше...</span><span class="show-less">Показать меньше...</span></button>
 						<div class="cardReviews__footer f-jcsb-aic">
 							<a href="https://ssilka-na-sait-s-otzivami">
-								<img class="h24" src="img/reviewers/ir.png" alt="">
+								<img loading="lazy" class="h24" src="img/reviewers/ir.png" alt="">
 							</a>
 							<a href="https://ssilka-na-tovar">
-								<img class="w80" src="img/card/03.png" alt="">
+								<img loading="lazy" class="w80" src="img/card/03.png" alt="">
 							</a>	
 						</div>
 					</div>
