--- a/#src/warranty.html
+++ b/#src/warranty.html
@@ -10,14 +10,14 @@
 			<div class="warrantyWork__body">
 				<div class="warrantyWork__row">
 					<div class="warrantyWork__text nlc-mb-32">
-						<img src="img/sprite/fill-sprite.svg#security" alt="">
+						<img loading="lazy" src="img/sprite/fill-sprite.svg#security" alt="">
 						<p class="text-huge">Как оформить возврат?</p>
 						<p>Достаточно заполнить форму, кликнув по кнопке ниже, отправить нам продукцию и, как только мы получим товар, сразу же вернём вам деньги на указанную карту.</p>
 						<p>Подробную информацию по заказу вы можете найти в <a href="" class="link">личном кабинете.</a></p>
 						<a class="btn" href="https://forms.yandex.ru/u/6096aaf7426d77e5d39340e4/">Заполнить форму возврата</a>
 					</div>
 					<div class="warrantyWork__image">
-						<img src="img/guarantee/08.jpg" alt="">
+						<img loading="lazy" src="img/guarantee/08.jpg" alt="">
 					</div>
 				</div>
 			</div>
