--- a/#src/blocks/fixedCard.html
+++ b/#src/blocks/fixedCard.html
@@ -2,7 +2,7 @@
 	<div class="container">
 		<div class="f-jcsb-aic p-8">
 			<div class="image-hw-120 md3-dn">
-				<img src="img/card/03.png" alt="">
+				<img loading="lazy" src="img/card/03.png" alt="">
 			</div>
 			<div class="flex-1 f-jcsb-aic p-8 fixedCard__row">
 				<div class="fixedCard__text">
