--- a/#src/blocks/productPage/reviews.html
+++ b/#src/blocks/productPage/reviews.html
@@ -13,25 +13,25 @@
 			</div>
 			<div class="reviewCategory__col">
 				<a href="" class="reviewCategory__item">
-					<img class="h24" src="img/reviewers/ozon.svg" alt="">
+					<img loading="lazy" class="h24" src="img/reviewers/ozon.svg" alt="">
 					<p>4.8 <span class="darkGray">(479)</span></p>
 				</a>
 			</div>
 			<div class="reviewCategory__col">
 				<a href="" class="reviewCategory__item">
-					<img class="h24" src="img/reviewers/ym.svg" alt="">
+					<img loading="lazy" class="h24" src="img/reviewers/ym.svg" alt="">
 					<p>4.7 <span class="darkGray">(120)</span></p>
 				</a>
 			</div>
 			<div class="reviewCategory__col">
 				<a href="" class="reviewCategory__item">
-					<img class="h24" src="img/reviewers/WB.svg" alt="">
+					<img loading="lazy" class="h24" src="img/reviewers/WB.svg" alt="">
 					<p>4.7 <span class="darkGray">(94)</span></p>
 				</a>
 			</div>
 			<div class="reviewCategory__col">
 				<a href="" class="reviewCategory__item">
-					<img class="h24" src="img/reviewers/ir.png" alt="">
+					<img loading="lazy" class="h24" src="img/reviewers/ir.png" alt="">
 					<p>4.4 <span class="darkGray">(739)</span></p>
 				</a>
 			</div>
@@ -59,7 +59,7 @@
 						<div class="d-flex aifs jcsb">
 							<div class="f-aic">
 								<div class="userImage mr-16">
-									<img src="img/people/03.jpg" alt="">
+									<img loading="lazy" src="img/people/03.jpg" alt="">
 									<span>К</span>
 								</div>
 								<div class="text-footnote mr-4">
@@ -78,10 +78,10 @@
 							<button class="cardReviews__button"><span class="show-more">Показать больше...</span><span class="show-less">Показать меньше...</span></button>
 							<div class="cardReviews__footer f-jcsb-aic">
 								<a href="https://ssilka-na-sait-s-otzivami">
-									<img class="h24" src="img/reviewers/ozon.svg" alt="">
+									<img loading="lazy" class="h24" src="img/reviewers/ozon.svg" alt="">
 								</a>
 								<a href="https://ssilka-na-tovar">
-									<img class="w80" src="img/card/01.png" alt="">
+									<img loading="lazy" class="w80" src="img/card/01.png" alt="">
 								</a>	
 							</div>
 						</div>
@@ -92,7 +92,7 @@
 						<div class="d-flex aifs jcsb">
 							<div class="f-aic">
 								<div class="userImage mr-16">
-									<img src="img/people/01.jpg" alt="">
+									<img loading="lazy" src="img/people/01.jpg" alt="">
 									<span>М</span>
 								</div>
 								<div class="text-footnote mr-4">
@@ -111,10 +111,10 @@
 							<button class="cardReviews__button"><span class="show-more">Показать больше...</span><span class="show-less">Показать меньше...</span></button>
 							<div class="cardReviews__footer f-jcsb-aic">
 								<a href="https://ssilka-na-sait-s-otzivami">
-									<img class="h24" src="img/reviewers/WB.svg" alt="">
+									<img loading="lazy" class="h24" src="img/reviewers/WB.svg" alt="">
 								</a>
 								<a href="https://ssilka-na-tovar">
-									<img class="w80" src="img/card/02.png" alt="">
+									<img loading="lazy" class="w80" src="img/card/02.png" alt="">
 								</a>	
 							</div>
 						</div>
@@ -125,7 +125,7 @@
 						<div class="d-flex aifs jcsb">
 							<div class="f-aic">
 								<div class="userImage mr-16">
-									<!-- <img src="img/people/03.jpg" alt=""> -->
+									<!-- <img loading="lazy" src="img/people/03.jpg" alt=""> -->
 									<span>А</span>
 								</div>
 								<div class="text-footnote mr-4">
@@ -144,10 +144,10 @@
 							<button class="cardReviews__button"><span class="show-more">Показать больше...</span><span class="show-less">Показать меньше...</span></button>
 							<div class="cardReviews__footer f-jcsb-aic">
 								<a href="https://ssilka-na-sait-s-otzivami">
-									<img class="h24" src="img/reviewers/ym.svg" alt="">
+									<img loading="lazy" class="h24" src="img/reviewers/ym.svg" alt="">
 								</a>
 								<a href="https://ssilka-na-tovar">
-									<img class="w80" src="img/card/03.png" alt="">
+									<img loading="lazy" class="w80" src="img/card/03.png" alt="">
 								</a>	
 							</div>
 						</div>
@@ -158,7 +158,7 @@
 						<div class="d-flex aifs jcsb">
 							<div class="f-aic">
 								<div class="userImage mr-16">
-									<!-- <img src="img/people/03.jpg" alt=""> -->
+									<!-- <img loading="lazy" src="img/people/03.jpg" alt=""> -->
 									<span>А</span>
 								</div>
 								<div class="text-footnote mr-4">
@@ -177,10 +177,10 @@
 							<button class="cardReviews__button"><span class="show-more">Показать больше...</span><span class="show-less">Показать меньше...</span></button>
 							<div class="cardReviews__footer f-jcsb-aic">
 								<a href="https://ssilka-na-sait-s-otzivami">
-									<img class="h24" src="img/reviewers/ir.png" alt="">
+									<img loading="lazy" class="h24" src="img/reviewers/ir.png" alt="">
 								</a>
 								<a href="https://ssilka-na-tovar">
-									<img class="w80" src="img/cart/c-01.png" alt="">
+									<img loading="lazy" class="w80" src="img/cart/c-01.png" alt="">
 								</a>	
 							</div>
 						</div>
@@ -191,7 +191,7 @@
 						<div class="d-flex aifs jcsb">
 							<div class="f-aic">
 								<div class="userImage mr-16">
-									<!-- <img src="img/people/03.jpg" alt=""> -->
+									<!-- <img loading="lazy" src="img/people/03.jpg" alt=""> -->
 									<span>Н</span>
 								</div>
 								<div class="text-footnote mr-4">
@@ -210,10 +210,10 @@
 							<button class="cardReviews__button"><span class="show-more">Показать больше...</span><span class="show-less">Показать меньше...</span></button>
 							<div class="cardReviews__footer f-jcsb-aic">
 								<a href="https://ssilka-na-sait-s-otzivami">
-									<img class="h24" src="img/reviewers/ir.png" alt="">
+									<img loading="lazy" class="h24" src="img/reviewers/ir.png" alt="">
 								</a>
 								<a href="https://ssilka-na-tovar">
-									<img class="w80" src="img/card/02.png" alt="">
+									<img loading="lazy" class="w80" src="img/card/02.png" alt="">
 								</a>	
 							</div>
 						</div>
@@ -224,7 +224,7 @@
 						<div class="d-flex aifs jcsb">
 							<div class="f-aic">
 								<div class="userImage mr-16">
-									<img src="img/people/03.jpg" alt="">
+									<img loading="lazy" src="img/people/03.jpg" alt="">
 									<span>К</span>
 								</div>
 								<div class="text-footnote mr-4">
@@ -243,10 +243,10 @@
 							<button class="cardReviews__button"><span class="show-more">Показать больше...</span><span class="show-less">Показать меньше...</span></button>
 							<div class="cardReviews__footer f-jcsb-aic">
 								<a href="https://ssilka-na-sait-s-otzivami">
-									<img class="h24" src="img/reviewers/ozon.svg" alt="">
+									<img loading="lazy" class="h24" src="img/reviewers/ozon.svg" alt="">
 								</a>
 								<a href="https://ssilka-na-tovar">
-									<img class="w80" src="img/card/01.png" alt="">
+									<img loading="lazy" class="w80" src="img/card/01.png" alt="">
 								</a>	
 							</div>
 						</div>
@@ -257,7 +257,7 @@
 						<div class="d-flex aifs jcsb">
 							<div class="f-aic">
 								<div class="userImage mr-16">
-									<img src="img/people/01.jpg" alt="">
+									<img loading="lazy" src="img/people/01.jpg" alt="">
 									<span>М</span>
 								</div>
 								<div class="text-footnote mr-4">
@@ -276,10 +276,10 @@
 							<button class="cardReviews__button"><span class="show-more">Показать больше...</span><span class="show-less">Показать меньше...</span></button>
 							<div class="cardReviews__footer f-jcsb-aic">
 								<a href="https://ssilka-na-sait-s-otzivami">
-									<img class="h24" src="img/reviewers/WB.svg" alt="">
+									<img loading="lazy" class="h24" src="img/reviewers/WB.svg" alt="">
 								</a>
 								<a href="https://ssilka-na-tovar">
-									<img class="w80" src="img/card/02.png" alt="">
+									<img loading="lazy" class="w80" src="img/card/02.png" alt="">
 								</a>	
 							</div>
 						</div>
@@ -290,7 +290,7 @@
 						<div class="d-flex aifs jcsb">
 							<div class="f-aic">
 								<div class="userImage mr-16">
-									<!-- <img src="img/people/03.jpg" alt=""> -->
+									<!-- <img loading="lazy" src="img/people/03.jpg" alt=""> -->
 									<span>А</span>
 								</div>
 								<div class="text-footnote mr-4">
@@ -309,10 +309,10 @@
 							<button class="cardReviews__button"><span class="show-more">Показать больше...</span><span class="show-less">Показать меньше...</span></button>
 							<div class="cardReviews__footer f-jcsb-aic">
 								<a href="https://ssilka-na-sait-s-otzivami">
-									<img class="h24" src="img/reviewers/ym.svg" alt="">
+									<img loading="lazy" class="h24" src="img/reviewers/ym.svg" alt="">
 								</a>
 								<a href="https://ssilka-na-tovar">
-									<img class="w80" src="img/card/03.png" alt="">
+									<img loading="lazy" class="w80" src="img/card/03.png" alt="">
 								</a>	
 							</div>
 						</div>
@@ -323,7 +323,7 @@
 						<div class="d-flex aifs jcsb">
 							<div class="f-aic">
 								<div class="userImage mr-16">
-									<!-- <img src="img/people/03.jpg" alt=""> -->
+									<!-- <img loading="lazy" src="img/people/03.jpg" alt=""> -->
 									<span>М</span>
 								</div>
 								<div class="text-footnote mr-4">
@@ -342,10 +342,10 @@
 							<button class="cardReviews__button"><span class="show-more">Показать больше...</span><span class="show-less">Показать меньше...</span></button>
 							<div class="cardReviews__footer f-jcsb-aic">
 								<a href="https://ssilka-na-sait-s-otzivami">
-									<img class="h24" src="img/reviewers/ir.png" alt="">
+									<img loading="lazy" class="h24" src="img/reviewers/ir.png" alt="">
 								</a>
 								<a href="https://ssilka-na-tovar">
-									<img class="w80" src="img/card/03.png" alt="">
+									<img loading="lazy" class="w80" src="img/card/03.png" alt="">
 								</a>	
 							</div>
 						</div>
