--- a/#src/blocks/productPage/stamp-block-X.html
+++ b/#src/blocks/productPage/stamp-block-X.html
@@ -20,7 +20,7 @@
 			</div>
 			<div class="col-2 p-0-8">
 				<div class="imageRad24">
-					<img src="img/other/13.jpg" alt="">
+					<img loading="lazy" src="img/other/13.jpg" alt="">
 				</div>
 			</div>
 		</div>
