--- a/#src/blocks/productPage/stick.html
+++ b/#src/blocks/productPage/stick.html
@@ -2,8 +2,8 @@
 	<div class="container">
 		<p class="p-16 text-huge mb-32">Только натуральные компоненты!</p>
 		<div class="stick__image">
-			<img class="stick__desc" src="@@imgStickDesc" alt="">
-			<img class="stick__mob" src="@@imgStickMob" alt="">
+			<img loading="lazy" class="stick__desc" src="@@imgStickDesc" alt="">
+			<img loading="lazy" class="stick__mob" src="@@imgStickMob" alt="">
 		</div>
 	</div>
 </div>
