--- a/#src/blocks/productPage/warrantyWork.html
+++ b/#src/blocks/productPage/warrantyWork.html
@@ -3,7 +3,7 @@
 		<div class="warrantyWork__body">
 			<div class="warrantyWork__row">
 				<div class="warrantyWork__text nlc-mb-16">
-					<img src="img/sprite/fill-sprite.svg#security" alt="">
+					<img loading="lazy" src="img/sprite/fill-sprite.svg#security" alt="">
 					<p class="text-huge">Как работает гарантия 90 дней?</p>
 					<p>Все очень просто, если вам не понравился продукт, и вы не получили ожидаемый эффект, то мы со своей стороны гарантируем возврат всей суммы заказа.</p>
 					<p class="text-medium">Почему мы так делаем?</p>
@@ -11,7 +11,7 @@
 					<a href="" class="link">Воспользоваться гарантией</a>
 				</div>
 				<div class="warrantyWork__image">
-					<img src="@@imageSrc" alt="">
+					<img loading="lazy" src="@@imageSrc" alt="">
 				</div>
 			</div>
 		</div>
