--- a/#src/home.html
+++ b/#src/home.html
@@ -26,19 +26,19 @@
 					</button>
 					<div class="fScreen__slider js-slider-baner slider-style-banner">
 						<div class="fScreen__image">
-							<img src="img/other/08.jpg" alt="">
+							<img loading="lazy" src="img/other/08.jpg" alt="">
 						</div>
 						<div class="fScreen__image">
-							<img src="img/other/05.jpg" alt="">
+							<img loading="lazy" src="img/other/05.jpg" alt="">
 						</div>
 						<div class="fScreen__image">
-							<img src="img/other/087.jpg" alt="">
+							<img loading="lazy" src="img/other/087.jpg" alt="">
 						</div>
 						<div class="fScreen__image">
-							<img src="img/other/06.jpg" alt="">
+							<img loading="lazy" src="img/other/06.jpg" alt="">
 						</div>
 						<div class="fScreen__image">
-							<img src="img/other/top-61.png" alt="">
+							<img loading="lazy" src="img/other/top-61.png" alt="">
 						</div>
 					</div>
 				</div>
@@ -117,9 +117,9 @@
 							<a href="https://site.com">
 								<div class="useful__image">
 									<div class="useful__imageWrap">
-										<img src="img/card/Mascara.jpg" alt="">
-										<img src="img/card/Mascara_v2.jpg" alt="">
-										<img src="img/card/Mascara_v3.jpg" alt="">
+										<img loading="lazy" src="img/card/Mascara.jpg" alt="">
+										<img loading="lazy" src="img/card/Mascara_v2.jpg" alt="">
+										<img loading="lazy" src="img/card/Mascara_v3.jpg" alt="">
 									</div>
 								</div>
 								<div class="useful__text nlc-mb-12 d-flex fdc flex-1">
@@ -148,7 +148,7 @@
 							<a href="https://site2.com">
 								<div class="useful__image">
 									<div class="useful__imageWrap">
-										<img src="img/card/Eyeliner.jpg" alt="">
+										<img loading="lazy" src="img/card/Eyeliner.jpg" alt="">
 									</div>
 								</div>
 								<div class="useful__text nlc-mb-12 d-flex fdc flex-1">
@@ -181,9 +181,9 @@
 							<a href="https://site3.com">
 								<div class="useful__image">
 									<div class="useful__imageWrap">
-										<img src="img/set/03.jpg" alt="">
-										<img src="img/set/03_v2.jpg" alt="">
-										<img src="img/set/03_v3.jpg" alt="">
+										<img loading="lazy" src="img/set/03.jpg" alt="">
+										<img loading="lazy" src="img/set/03_v2.jpg" alt="">
+										<img loading="lazy" src="img/set/03_v3.jpg" alt="">
 									</div>
 								</div>
 								<div class="useful__text nlc-mb-12 d-flex fdc flex-1">
@@ -215,8 +215,8 @@
 							<a href="https://site.com">
 								<div class="useful__image">
 									<div class="useful__imageWrap">
-										<img src="img/card/01.png" alt="">
-										<img src="img/card/01_v2.png" alt="">
+										<img loading="lazy" src="img/card/01.png" alt="">
+										<img loading="lazy" src="img/card/01_v2.png" alt="">
 									</div>
 								</div>
 								<div class="useful__text nlc-mb-12 d-flex fdc flex-1">
@@ -245,7 +245,7 @@
 							<a href="https://site2.com">
 								<div class="useful__image">
 									<div class="useful__imageWrap">
-										<img src="img/card/Rose.jpg" alt="">
+										<img loading="lazy" src="img/card/Rose.jpg" alt="">
 									</div>
 								</div>
 								<div class="useful__text nlc-mb-12 d-flex fdc flex-1">
@@ -279,9 +279,9 @@
 							<a href="https://site3.com">
 								<div class="useful__image">
 									<div class="useful__imageWrap">
-										<img src="img/set/01.jpg" alt="">
-										<img src="img/set/01_v2.jpg" alt="">
-										<img src="img/set/01_v3.jpg" alt="">
+										<img loading="lazy" src="img/set/01.jpg" alt="">
+										<img loading="lazy" src="img/set/01_v2.jpg" alt="">
+										<img loading="lazy" src="img/set/01_v3.jpg" alt="">
 									</div>
 								</div>
 								<div class="useful__text nlc-mb-12 d-flex fdc flex-1">
@@ -314,9 +314,9 @@
 							<a href="https://site2.com">
 								<div class="useful__image">
 									<div class="useful__imageWrap">
-										<img src="img/card/02.png" alt="">
-										<img src="img/card/02_v2.png" alt="">
-										<img src="img/card/02_v3.png" alt="">
+										<img loading="lazy" src="img/card/02.png" alt="">
+										<img loading="lazy" src="img/card/02_v2.png" alt="">
+										<img loading="lazy" src="img/card/02_v3.png" alt="">
 									</div>
 								</div>
 								<div class="useful__text nlc-mb-12 d-flex fdc flex-1">
@@ -349,8 +349,8 @@
 							<a href="https://site2.com">
 								<div class="useful__image">
 									<div class="useful__imageWrap">
-										<img src="img/card/03.png" alt="">
-										<img src="img/card/03_v2.png" alt="">
+										<img loading="lazy" src="img/card/03.png" alt="">
+										<img loading="lazy" src="img/card/03_v2.png" alt="">
 									</div>
 								</div>
 								<div class="useful__text nlc-mb-12 d-flex fdc flex-1">
@@ -448,7 +448,7 @@
 						<div class="set__col">
 							<div class="cardSet">
 								<div class="cardSet__image">
-									<div class="cardSet__imageWrap"><img src="img/card/01.png" alt=""></div>
+									<div class="cardSet__imageWrap"><img loading="lazy" src="img/card/01.png" alt=""></div>
 								</div>
 								<div class="cardSet__content">
 									<div class="cardSet__text">
@@ -473,7 +473,7 @@
 						<div class="set__col">
 							<div class="cardSet">
 								<div class="cardSet__image">
-									<div class="cardSet__imageWrap"><img src="img/card/02.png" alt=""></div>
+									<div class="cardSet__imageWrap"><img loading="lazy" src="img/card/02.png" alt=""></div>
 								</div>
 								<div class="cardSet__content">
 									<div class="cardSet__text">
@@ -498,7 +498,7 @@
 						<div class="set__col">
 							<div class="cardSet">
 								<div class="cardSet__image">
-									<div class="cardSet__imageWrap"><img src="img/card/03.png" alt=""></div>
+									<div class="cardSet__imageWrap"><img loading="lazy" src="img/card/03.png" alt=""></div>
 								</div>
 								<div class="cardSet__content">
 									<div class="cardSet__text">
@@ -523,7 +523,7 @@
 						<div class="set__col">
 							<div class="cardSet">
 								<div class="cardSet__image">
-									<div class="cardSet__imageWrap"><img src="img/set/01.jpg" alt=""></div>
+									<div class="cardSet__imageWrap"><img loading="lazy" src="img/set/01.jpg" alt=""></div>
 								</div>
 								<div class="cardSet__content">
 									<div class="cardSet__text">
@@ -548,7 +548,7 @@
 						<div class="set__col">
 							<div class="cardSet">
 								<div class="cardSet__image">
-									<div class="cardSet__imageWrap"><img src="img/set/03.jpg" alt=""></div>
+									<div class="cardSet__imageWrap"><img loading="lazy" src="img/set/03.jpg" alt=""></div>
 								</div>
 								<div class="cardSet__content">
 									<div class="cardSet__text">
@@ -590,7 +590,7 @@
 						<div class="set__col">
 							<div class="cardSet">
 								<div class="cardSet__image">
-									<div class="cardSet__imageWrap"><img src="img/card/03.png" alt=""></div>
+									<div class="cardSet__imageWrap"><img loading="lazy" src="img/card/03.png" alt=""></div>
 								</div>
 								<div class="cardSet__content">
 									<div class="cardSet__text">
@@ -615,7 +615,7 @@
 						<div class="set__col">
 							<div class="cardSet">
 								<div class="cardSet__image">
-									<div class="cardSet__imageWrap"><img src="img/card/01.png" alt=""></div>
+									<div class="cardSet__imageWrap"><img loading="lazy" src="img/card/01.png" alt=""></div>
 								</div>
 								<div class="cardSet__content">
 									<div class="cardSet__text">
@@ -640,7 +640,7 @@
 						<div class="set__col">
 							<div class="cardSet">
 								<div class="cardSet__image">
-									<div class="cardSet__imageWrap"><img src="img/set/01.jpg" alt=""></div>
+									<div class="cardSet__imageWrap"><img loading="lazy" src="img/set/01.jpg" alt=""></div>
 								</div>
 								<div class="cardSet__content">
 									<div class="cardSet__text">
@@ -665,7 +665,7 @@
 						<div class="set__col">
 							<div class="cardSet">
 								<div class="cardSet__image">
-									<div class="cardSet__imageWrap"><img src="img/set/03.jpg" alt=""></div>
+									<div class="cardSet__imageWrap"><img loading="lazy" src="img/set/03.jpg" alt=""></div>
 								</div>
 								<div class="cardSet__content">
 									<div class="cardSet__text">
@@ -707,7 +707,7 @@
 						<div class="set__col">
 							<div class="cardSet">
 								<div class="cardSet__image">
-									<div class="cardSet__imageWrap"><img src="img/card/03.png" alt=""></div>
+									<div class="cardSet__imageWrap"><img loading="lazy" src="img/card/03.png" alt=""></div>
 								</div>
 								<div class="cardSet__content">
 									<div class="cardSet__text">
@@ -732,7 +732,7 @@
 						<div class="set__col">
 							<div class="cardSet">
 								<div class="cardSet__image">
-									<div class="cardSet__imageWrap"><img src="img/card/01.png" alt=""></div>
+									<div class="cardSet__imageWrap"><img loading="lazy" src="img/card/01.png" alt=""></div>
 								</div>
 								<div class="cardSet__content">
 									<div class="cardSet__text">
@@ -757,7 +757,7 @@
 						<div class="set__col">
 							<div class="cardSet">
 								<div class="cardSet__image">
-									<div class="cardSet__imageWrap"><img src="img/card/02.png" alt=""></div>
+									<div class="cardSet__imageWrap"><img loading="lazy" src="img/card/02.png" alt=""></div>
 								</div>
 								<div class="cardSet__content">
 									<div class="cardSet__text">
@@ -782,7 +782,7 @@
 						<div class="set__col">
 							<div class="cardSet">
 								<div class="cardSet__image">
-									<div class="cardSet__imageWrap"><img src="img/set/01.jpg" alt=""></div>
+									<div class="cardSet__imageWrap"><img loading="lazy" src="img/set/01.jpg" alt=""></div>
 								</div>
 								<div class="cardSet__content">
 									<div class="cardSet__text">
@@ -807,7 +807,7 @@
 						<div class="set__col">
 							<div class="cardSet">
 								<div class="cardSet__image">
-									<div class="cardSet__imageWrap"><img src="img/set/03.jpg" alt=""></div>
+									<div class="cardSet__imageWrap"><img loading="lazy" src="img/set/03.jpg" alt=""></div>
 								</div>
 								<div class="cardSet__content">
 									<div class="cardSet__text">
@@ -850,28 +850,28 @@
 				<div class="d-flex-w">
 					<div class="col-4 p-16">
 						<div class="cardTerms v4 mod-v2">
-							<img src="img/sprite/fill-sprite.svg#green-fire" alt="">
+							<img loading="lazy" src="img/sprite/fill-sprite.svg#green-fire" alt="">
 							<p class="text-medium">Натуральный состав</p>
 							<p>Препарат прошёл исследования. Все компоненты абсолютно безопасны и гепоалергенны.</p>
 						</div>
 					</div>
 					<div class="col-4 p-16">
 						<div class="cardTerms v5 mod-v2">
-							<img src="img/sprite/fill-sprite.svg#euro" alt="">
+							<img loading="lazy" src="img/sprite/fill-sprite.svg#euro" alt="">
 							<p class="text-medium">Европейское качество</p>
 							<p>Топлаш прошёл все исследования Европейской комиссии и рекомендован к использованию.</p>
 						</div>
 					</div>
 					<div class="col-4 p-16">
 						<div class="cardTerms v6 mod-v2">
-							<img src="img/sprite/fill-sprite.svg#brow" alt="">
+							<img loading="lazy" src="img/sprite/fill-sprite.svg#brow" alt="">
 							<p class="text-medium">Альтернатива наращиванию</p>
 							<p>Свои, настоящие ресницы всего за 21 день — наращивание попросту больше не нужно.</p>
 						</div>
 					</div>
 					<div class="col-4 p-16">
 						<div class="cardTerms v3 mod-v2">
-							<img src="img/sprite/fill-sprite.svg#security" alt="">
+							<img loading="lazy" src="img/sprite/fill-sprite.svg#security" alt="">
 							<p class="text-medium">Гарантия 90 дней</p>
 							<p>Если за это время вы оказались недовольны результатом, мы вернём все деньги.</p>
 						</div>
@@ -886,7 +886,7 @@
 			<div class="result21__row">
 				<div class="result21__col">
 					<div class="result21__image">
-						<img src="img/other/05.jpg" alt="">
+						<img loading="lazy" src="img/other/05.jpg" alt="">
 					</div>
 				</div>
 				<div class="result21__col">
@@ -933,19 +933,19 @@
 			<div class="d-flex-w">
 				<div class="col-3 p-16">
 					<a href="" class="cardImage">
-						<img src="img/other/bg-header.jpg" alt="">
+						<img loading="lazy" src="img/other/bg-header.jpg" alt="">
 						<p class="text-medium p-16">Как правильно ухаживать за ресницами после наращивания?</p>
 					</a>
 				</div>
 				<div class="col-3 p-16">
 					<a href="" class="cardImage">
-						<img src="img/other/087.jpg" alt="">
+						<img loading="lazy" src="img/other/087.jpg" alt="">
 						<p class="text-medium p-16">Длинные ресницы и густые брови — за 21 день без наращивания</p>
 					</a>
 				</div>
 				<div class="col-3 p-16">
 					<a href="" class="cardImage">
-						<img src="img/other/b-01.jpg" alt="">
+						<img loading="lazy" src="img/other/b-01.jpg" alt="">
 						<p class="text-medium p-16">Длинные ресницы и густые брови — за 21 день без наращивания</p>
 					</a>
 				</div>
