--- a/#src/private.html
+++ b/#src/private.html
@@ -12,7 +12,7 @@
 				<div class="card-v1 mod-md-p-16 bg-green white f-jcsb fdc">
 					<div class="mb-16">
 						<div class="f-aic">
-							<img src="img/icon/money.png" alt="">
+							<img loading="lazy" src="img/icon/money.png" alt="">
 							<p class="text-extra-small ml-8">Ваш бонусный счёт (1балл=1₽):</p>
 						</div>
 						<p class="text-huge">677 баллов</p>
@@ -27,7 +27,7 @@
 					<div class="f-jcsb-aic personal__header">
 						<div class="f-aic mr-8">
 							<div class="userImage mr-16">
-								<img src="img/people/03.jpg" alt="">
+								<img loading="lazy" src="img/people/03.jpg" alt="">
 								<span>К</span>
 							</div>
 							<p class="text-medium">Виктория</p>
@@ -211,7 +211,7 @@
 			<div class="col-2 p-16">
 				<div class="easyEarn__card">
 					<div class="image-hw-80">
-						<img src="img/other/credit-card_1.png" alt="">
+						<img loading="lazy" src="img/other/credit-card_1.png" alt="">
 					</div>
 					<div class="text-huge">150 рублей</div>
 					<svg class="easyEarn__tail"><use xlink:href="img/sprite/icons-sprite.svg#tail"/></svg>
