--- a/#src/forgot-password.html
+++ b/#src/forgot-password.html
@@ -11,7 +11,7 @@
 			<p class="darkGray text-medium">Ничего страшного, сейчас мы поможем вам его восстановить.</p>
 		</div>
 		<div class="f-jcc-aic">
-			<form class="auth__body card-v1 nlc-mb-32 js-validation-form" action="" method="post">
+			<form class="auth__body card-v1 mod-md-p-16 nlc-mb-32 js-validation-form" action="" method="post">
 				<p>Введите почту, указаную при регистрации и мы отправим вам пароль для входа в ваш кабинет.</p>
 				<div class="js-validation-block">
 					<div class="inputText">
