--- a/#src/gel-for-eyebrows.html
+++ b/#src/gel-for-eyebrows.html
@@ -48,13 +48,13 @@
 		"img2": "img/card/gel.png",
 		"pageIsNotMascara": true
 	})
-	<div class="main-p-64-0">
+	<div class="main-pt-64">
 		@@include('blocks/productPage/warrantyWork.html',{
 			"imageSrc": "img/guarantee/05.jpg"
 		})
 		@@include('blocks/productPage/faq.html')
 	</div>
-	<div class="main-pt-32-pb-16">
+	<div class="pb-16">
 		@@include('blocks/productPage/stories.html')
 		@@include('blocks/productPage/feedback.html')
 		@@include('blocks/productPage/terms.html')
