--- a/#src/stamp.html
+++ b/#src/stamp.html
@@ -39,13 +39,13 @@
 		})
 	</div>
 	@@include('blocks/productPage/stamp-block-X.html')
-	<div class="main-p-64-0">
+	<div class="main-pt-64">
 		@@include('blocks/productPage/warrantyWork.html',{
 			"imageSrc": "img/guarantee/03.jpg"
 		})
 		@@include('blocks/productPage/faq.html')
 	</div>
-	<div class="main-pt-32-pb-16">
+	<div class="pb-16">
 		@@include('blocks/productPage/stories.html')
 		@@include('blocks/productPage/feedback.html')
 		@@include('blocks/productPage/terms.html')
